# blockchain

./: CMakeLists.txt  README.md  doxygen.conf
extra/: CMakeLists.txt
extra/include/: directory.hpp  string_support.hpp
extra/src/: crc16.cpp  crc32.cpp  crc64.cpp  directory.cpp  string_support.cpp
html/: Asset_8hpp_source.html  BankAccount_8hpp_source.html  Block_8hpp_source.html  Buyer_8hpp_source.html  CDN_8hpp_source.html  Chain_8hpp_source.html  CreditCard_8hpp_source.html  Currency_8hpp_source.html  DebitCard_8hpp_source.html  Goods_8hpp_source.html  HelloWorld_8hpp_source.html  Information_8hpp_source.html  Initiator_8hpp_source.html  Loan_8hpp_source.html  Money_8hpp_source.html  Mortgage_8hpp_source.html  Payment_8hpp_source.html  Purchase_8hpp_source.html  Responder_8hpp_source.html  Seller_8hpp_source.html  Services_8hpp_source.html  Transaction_8hpp_source.html  USD_8hpp_source.html  annotated.html  classAssetInterface.html  classBankAccountInterface.html  classBlockInterface.html  classBuyerInterface.html  classChainInterface.html  classCreditCardInterface.html  classCurrencyInterface.html  classDebitCardInterface.html  classGoodsInterface.html  classHelloWorldInterface.html  classInformationInterface.html  classLoanInterface.html  classMoneyInterface.html  classMortgageInterface.html  classPaymentInterface.html  classPurchaseInterface.html  (+13 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  searchdata.js
include/blockchain/: Block.hpp  Chain.hpp
include/transactions/: Asset.hpp  BitCoin.hpp  Buyer.hpp  Currency.hpp  Entity.hpp  Initiator.hpp  Inventory.hpp  Item.hpp  Money.hpp  Payment.hpp  Responder.hpp  Seller.hpp  Transaction.hpp
include/transactions/assets/: Goods.hpp  Information.hpp  Money.hpp  Services.hpp
include/transactions/assets/examples/: NewsWeek.hpp
include/transactions/currencies/: CDN.hpp  USD.hpp
include/transactions/entities/: BillGates.hpp  Walmart.hpp
include/transactions/types/: BankAccount.hpp  CreditCard.hpp  DebitCard.hpp  Loan.hpp  Mortgage.hpp  Purchase.hpp
latex/: annotated.tex  classAssetInterface.tex  classBankAccountInterface.tex  classBlockInterface.tex  classBuyerInterface.tex  classChainInterface.tex  classCreditCardInterface.tex  classCurrencyInterface.tex  classDebitCardInterface.tex  classGoodsInterface.tex  classInformationInterface.tex  classLoanInterface.tex  classMoneyInterface.tex  classMortgageInterface.tex  classPaymentInterface.tex  classPurchaseInterface.tex  classSellerInterface.tex  classServicesInterface.tex  classTransactionInterface.tex  refman.tex
src/blockchain/: Block.cpp  Chain.cpp
src/transactions/: Asset.cpp  Buyer.cpp  Entity.cpp  Inventory.cpp  Item.cpp  Payment.cpp  Seller.cpp  Transaction.cpp
src/transactions/assets/: Goods.cpp  Information.cpp  Money.cpp  Services.cpp
src/transactions/currencies/: CDN.cpp  USD.cpp
src/transactions/types/: BankAccount.cpp  CreditCard.cpp  DebitCard.cpp  Loan.cpp  Mortgage.cpp  Purchase.cpp
test/: test_Block.cpp  test_Chain.cpp  test_FakeIt.cpp  test_HelloWorld.cpp  test_Transaction.cpp  test_TransactionsFakeit.cpp
